<resources>
    <string name="app_name">Aportage</string>
    <string name="title_activity_meldingen">Meldingen</string>
    <string name="title_activity_melding">Melding</string>
    <string name="title_activity_campussen">Kies een campus</string>
    <string name="title_activity_verdiepingen">Verdiepingen</string>
    <string name="title_activity_lokalen">Lokalen</string>
    <string name="title_activity_overzicht">APortage</string>
    <string name="melding_melder_label">Gemeld door: </string>
    <string name="melding_melder">Karima</string>
    <string name="melding_tijdstip_label">op</string>
    <string name="melding_tijdstip">01/10/2018 14:34</string>
    <string name="melding_status">Ontvangen</string>
    <string name="nav_campus_naam">Ellerman</string>
    <string name="verdiep_label">Verdieping</string>
    <string name="verdiep_nummer">00</string>

    <string name="ocr_gescande_text">Gelezen tekst…</string>

    <string name="label_locatie">Locatie:</string>
    <string name="scan_melding_button_label"> Foto toevoegen </string>
    <string name="label_scan_melding_titel">Titel:</string>
    <string name="scan_melding_hint_titel">Titel voor de melding…</string>
    <string name="scan_melding_label_omschrijving">Omschrijving: </string>
    <string name="scan_melding_label_btn_ok">OK</string>
    <string name="scan_melding_btn_label_annuleren">Annuleer</string>
    <string name="overzicht_label_scannen">Scannen [ - ]</string>
    <string name="overzicht_label_zoeken">Zoeken</string>
    <string name="scannen_label_btn_ok">Doorsturen</string>
    <string name="scannen_label_btn_annuleren">Annuleren</string>
    <string name="lokalen_label">Lokaal</string>
    <string name="lokaal_placeholder">00.000</string>
    <string name="melding_titel">Name</string>
    <string name="tv_login_label_email">Email:</string>
    <string name="login_hint_email">Voer hier jouw e-mailadres in...</string>
    <string name="label_login_pw">Wachtwoord:</string>
    <string name="label_login_btn">Login</string>
    <string name="label_login_registeren">Registreren</string>
    <string name="label_registeren_naam">Naam- en achternaam</string>
    <string name="registeren_label_cb_gdpr">Ik ga akkoord dat mijn gegevens worden gebruikt om mijn meldingen op te slaan</string>
    <string name="registreren_cb_label_facilitair">Ik ben een facilitaire medewerker</string>
    <string name="label_registeren_btn_registreer">Registreer mij</string>
    <string name="label_registeren_loginlink"><![CDATA[< Ik heb al een account, ga terug naar login]]></string>


    <!-- Intents -->
    <string name="campus_intent">campus_afk</string>
    <string name="verdieping_intent">verdieping_nr</string>
    <string name="lokaal_intent">lokaal_nr</string>


    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">yWQjcw5gFEV6rv87LcC74lYDR3ImNemoYQoqzxRs</string>
    <string name="back4app_client_key">JNWCqKLCZynJ6YsqEVftXeUQo4wsUm85kgR8YuPR</string>
    <string name="tv_mijnmeldingen_titel">Mijn Melding</string>
    <string name="label_mijn_meldingen">Mijn Meldingen</string>
    <string name="label_overzicht_mijnmeldingen">Mijn Meldingen</string>
    <string name="profiel_label_naam">Naam- en voornaam</string>
    <string name="label_oudwachtwoord">Oud wachtwoord</string>
    <string name="label_nieuwwachtwoord">Nieuw wachtwoord</string>
    <string name="label_toolbar_profiel">Mijn profiel</string>
    <string name="label_opslaan">Opslaan</string>
    <string name="label_loguit">uitloggen</string>
    <string name="hint_beschrijving">Beschrijf hier wat je wil melden...</string>
    <string name="hint_naam" >Geef hier je volledige naam...</string>
    <string name="label_status">Status...</string>
    <string name="label_placeholder_meldingen">Geen meldingen onder dit lokaal</string>


</resources>
